release 1.1.1-ea (2009-06)
- Fixed issue 154
  https://jersey.dev.java.net/issues/show_bug.cgi?id=154
  The com.sun.jersey.core.provider.EntityHolder type may be utilized as a 
  "meta-entity" to determine whether a request consumed by the server, or a 
  response consumed by the client, contains the entity or contains no entity, 
  for example:
     @POST
     @Consumes("text/plain")
     public void post(EntityHolder<MyJAXBObject> s) {
         if (s.hasEntity()) {
             MyJAXBObject entity = s.getEntity();
         } else {
           ...
         }
     }
- Fixed issue 298
  https://jersey.dev.java.net/issues/show_bug.cgi?id=298
  A race condition was resolved when return List<T> where T is a JAXB object.
- Fixed issue 286
  https://jersey.dev.java.net/issues/show_bug.cgi?id=286
  Classes that extend ContextResolver may declare a type variable declaration
  that is resolved to a class or parameterized type by an extending class.
- Fixed issue 291
  https://jersey.dev.java.net/issues/show_bug.cgi?id=291
  If the @DefaultValue annotation is not present and no parameter is present
  an empty collection will be returned for the types List, Set or SortedSet.
- Added Jersey EJB sample
- Fixed issue 292
  https://jersey.dev.java.net/issues/show_bug.cgi?id=292
  The file based configuration of custom WadlGenerator implementations via
  the WadlGeneratorConfig is now deprecated and will be removed in future
  versions. As alternative the InputStream based configuration shall be used.

release 1.1.0-ea (2009-05-04)
- Fixed issue 283
  https://jersey.dev.java.net/issues/show_bug.cgi?id=283
  Removed race condition that may occur when concurrently creating the 
  meta-data for a resource class.
- Added security sample - https service with http basic authentication on
  GlassFish 2.x
- Fixed issue 278
  https://jersey.dev.java.net/issues/show_bug.cgi?id=278
  com.sun.jersey.api.client.filter.HTTPBasicAuthFilter was not correctly